fix spacing

--- a/static/style.css
+++ b/static/style.css
@@ -20,9 +20,9 @@
 
 .navbar {
     background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
+    position: relative;
     max-width: 100%;
-    max-height: 25%;
+    max-height: 23%;
     top: 0;
     left: 0;
     right: 0;
@@ -60,9 +60,10 @@ h1 {
 
 .content {
     position: relative;
-    margin-top: 10%;
     z-index: 1;
     padding: 25px;
+    margin-top: 10px;
+    margin-bottom: 5%;
     font-weight: bold;
     color: #1f1e1e;
     background-color: rgba(242, 242, 242, 0.3);
@@ -112,12 +113,6 @@ th {
     font-family: 'Courier New', monospace;
 }
 
-.disclaimer {
-    margin: 25px;
-    padding: 10px;
-    font-size: 14px;
-    color: #f2f2f2;
-}
 .bottom-bar {
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
